# dr-veritas

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: cb980d100f80_init_schema.py
data/: 00_prepare_data.ipynb  README.md
docker/initdb/: 001_extensions.sql
docs/: data.md  pmc_oa_usage.md
dr-veritas/: utils.py
scripts/: bootstrap_colab.sh
src/vera/: cli.py
src/vera/adapters/blob/: store.py
src/vera/adapters/db/: engine.py  models.py
src/vera/config/: settings.py
src/vera/interfaces/cli/: app.py
src/vera/ports/: blob.py
