[project]
name = "vera"
version = "0.1.0"
description = "Dr Vera"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.128.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.5",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "sqlmodel>=0.0.31",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "textual>=6.11.0",
    "typer>=0.21.0",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vera"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[project.scripts]
vera = "vera.cli:app"
